objects/pepCmsPage__c.object
<CustomObject>
    <fields>
        <fullName>Backup_ID__c</fullName>
        <label>Backup ID</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Production_RowId__c</fullName>
        <description>Used when migrating records from Production to Sandboxes. Will be blank in Production, but when inserting these records into Sandbox we insert the Id from Prd into this field. This is our logical key for setting this Record in Lookups in other objects.</description>
        <externalId>true</externalId>
        <label>Production_RowId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pepPageName__c</fullName>
        <label>Page Name</label>
        <picklist>
            <picklistValues>
                <fullName>Landing Page</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Apply Page</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Loan Details</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Income Details</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Expenses</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Serviceability</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Submit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>App Login Page</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Save &amp; Retrieve Functionality</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Living Expenses Calculator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Header</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Footer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Personal Details</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Decline</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Referred</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Serviceability Negative</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Serviceability Negative2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Loan Setup(verifyid)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Loan Setup (Credit-Policy)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finalise Repayment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Loan Setup(FinancialDoc)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Debt Consolidation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Loan Setup(Manual Upload)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Congratulations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Payment Setup</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Loan Setup(upload another Image)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SideBarTemplate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contract</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Loan Setup (Bank-Detail)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Application Complete</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>CMS Page</label>
    <nameField>
        <displayFormat>P-{0000}</displayFormat>
        <label>Page Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Page</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>